--- a/Assignment 1/JAssignment1-DilkhushYadav/public/css/style.css
+++ b/Assignment 1/JAssignment1-DilkhushYadav/public/css/style.css
@@ -15,6 +15,10 @@ a{
     color: #000;
     text-decoration: none;
 }
+/* Theme Background */
+.bg-theme{
+    background-color: #cfe7e4;
+}
 
 /* Sticky Navbar */
 .navbar {
@@ -160,6 +164,37 @@ form {
     background: #bee0db;
     box-shadow: 0 0 3px 1px #4d807a;
     transition: all .3s;
+}
+
+/* Home text */
+.home-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.home-text p span{
+    font-size: 25px;
+}
+
+/* Home button Go */
+.btn-go{
+    display: block;
+    margin-top: 20px;
+}
+
+.btn-go button{
+    padding: 8px 25px;
+    border: none;
+    background: #004e47;
+    color: #ffffff;
+}
+
+.btn-go button:hover{
+    background: #003a35;
+    color: #cfe7e4;
 }
 
 /* ==========================
